--- a/CitySolution_Authority/app/src/main/res/values/strings.xml
+++ b/CitySolution_Authority/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SafeCity</string>
+    <string name="app_name">AuthCitySolution</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
