--- a/CitySolution_User/app/src/main/res/values/strings.xml
+++ b/CitySolution_User/app/src/main/res/values/strings.xml
@@ -47,6 +47,6 @@
     <string name="History">History</string>
     <string name="Settings">Settings</string>
     <string name="Statistics">Statistics</string>
-    <string name="AboutUs">About Us</string>
+    <string name="AboutUs">Available In</string>
     <string name="SignOut">Sign Out</string>
 </resources>
